背景色の変更

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -1,8 +1,8 @@
 ---
 ---
 
-$header-bg-color: #80796c;
-$header-bg-color-secondary: #5b5c76;
+$header-bg-color: #3b82c4;
+$header-bg-color-secondary: #1760a0;
 
 $dark-header-bg-color: #333333;
 $dark-header-bg-color-secondary: #333333;
