--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -1,8 +1,8 @@
 ---
 ---
 
-$header-bg-color: #3b82c4;
-$header-bg-color-secondary: #1760a0;
+$header-bg-color: #1760a0;
+$header-bg-color-secondary: #4699ca;
 
 $dark-header-bg-color: #333333;
 $dark-header-bg-color-secondary: #333333;
