--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -25,6 +25,22 @@
       {% endif %}
     </header>
 
+    <nav>
+      <ul class="main-nav">
+        <li><a href="/web_template.github.io/">ホーム</a></li>
+        <li>
+          <div class="dropdown">
+            <button class="dropbtn">マニュアル</button>
+            <div class="dropdown-content">
+              <a href="/web_template.github.io/githubpages">GithubPages マニュアル</a>
+              <a href="/web_template.github.io/webtemplate">Webテンプレート マニュアル</a>
+            </div>
+          </div>
+        </li>
+        <li><a href="/web_template.github.io/sample.html">サンプルページ</a></li>        
+      </ul>
+    </nav>
+
     <main id="content" class="main-content" role="main">
       {{ content }}
 
