--- a/work/_layouts/default.html
+++ b/work/_layouts/default.html
@@ -37,7 +37,7 @@
             </div>
           </div>
         </li>
-        <li><a href="/web_template.github.io/sample.html">サンプルページ</a></li>        
+        <li><a href="/web_template.github.io/sample/sample.html">サンプルページ</a></li>        
       </ul>
     </nav>
 
