--- a/work/assets/css/style.scss
+++ b/work/assets/css/style.scss
@@ -15,7 +15,7 @@ $blockquote-text-color: #333333;
 .main-nav {
   display: flex;
   font-size: 1.25rem;
-  text-transform: none;
+  text-transform: uppercase;
   margin-top: 34px;
   list-style: none;
   justify-content: center;
