--- a/docs/assets/style.scss
+++ b/docs/assets/style.scss
@@ -1,4 +1,7 @@
---- --- $header-bg-color: #1760a0;
+---
+---
+
+$header-bg-color: #1760a0;
 $header-bg-color-secondary: #4699ca;
 
 $dark-header-bg-color: #333333;
@@ -12,17 +15,15 @@ $blockquote-text-color: #333333;
 .main-nav {
   display: flex;
   font-size: 1.25rem;
-  text-transform: none;
+  text-transform: uppercase;
   margin-top: 34px;
   list-style: none;
   justify-content: center;
 }
-
 .main-nav li {
   margin-left: 18px;
   margin-right: 18px;
 }
-
 .main-nav a {
   color: #82aaaa;
 }
@@ -47,7 +48,7 @@ $blockquote-text-color: #333333;
   background-color: #f9f9f9;
   border-radius: 4px;
   min-width: 240px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
   text-transform: none;
 }
@@ -59,9 +60,7 @@ $blockquote-text-color: #333333;
   display: block;
 }
 
-.dropdown-content a:hover {
-  background-color: #f1f1f1
-}
+.dropdown-content a:hover {background-color: #f1f1f1}
 
 .dropdown:hover .dropdown-content {
   display: block;
@@ -82,12 +81,12 @@ $blockquote-text-color: #333333;
     background: #181818;
     color: #bac1c4;
   }
-
+  
   .page-header {
     background-color: $dark-header-bg-color;
     background-image: linear-gradient(120deg, $dark-header-bg-color-secondary, $dark-header-bg-color);
   }
-
+  
   .btn {
     background-color: rgba(0, 0, 0, 0.2);
     border-color: rgba(0, 0, 0, 0.07);
@@ -97,11 +96,11 @@ $blockquote-text-color: #333333;
       border-color: rgba(0, 0, 0, 0.15);
     }
   }
-
+  
   img[src$=".svg"] {
     filter: invert(1) hue-rotate(180deg);
   }
-
+  
   .main-content h1,
   .main-content h2,
   .main-content h3,
@@ -110,25 +109,25 @@ $blockquote-text-color: #333333;
   .main-content h6 {
     color: #333333;
   }
-
+  
   a {
     color: cornflowerblue;
   }
-
+  
   div.highlight {
     background-color: transparent;
   }
-
+  
   .main-content pre.highlight {
     background-color: #333;
     border: solid 2px;
   }
-
+  
   .main-content code {
     color: hsl(199deg, 36%, 73%);
     background-color: #333;
   }
-
+  
   .highlight .ge,
   .highlight .kc,
   .highlight .kd,
@@ -141,8 +140,8 @@ $blockquote-text-color: #333333;
   .highlight .o {
     color: #fff;
   }
-
-  .main-content pre>code {
+  
+  .main-content pre > code {
     color: hsl(199deg, 56%, 73%);
   }
 
