--- a/work/assets/css/style.scss
+++ b/work/assets/css/style.scss
@@ -13,7 +13,7 @@ $body-link-color: #82aaaa;
 $blockquote-text-color: #333333;
 
 .main-nav {
-  display: flex !important;
+  display: flex ;
   font-size: 1.25rem;
   text-transform: none;
   margin-top: 34px;
