--- a/work/assets/css/style.scss
+++ b/work/assets/css/style.scss
@@ -11,11 +11,10 @@ $section-headings-color: #333333;
 $body-link-color: #82aaaa;
 
 $blockquote-text-color: #333333;
-.tip{
-  color: #00d431;
-}
-.warning{
-  color: orange;
+
+
+.description{
+  color: inherit;
 }
 .main-nav {
   display: flex ;
