--- a/docs/assets/style.scss
+++ b/docs/assets/style.scss
@@ -12,6 +12,10 @@ $body-link-color: #82aaaa;
 
 $blockquote-text-color: #333333;
 
+.description{
+  color: inherit;
+}
+
 .main-nav {
   display: flex ;
   font-size: 1.25rem;
