--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -3,7 +3,17 @@
 
   <head>
     <meta charset="UTF-8">
-
+    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3M0FS3CY8P"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-3M0FS3CY8P');
+    </script>
+    
     {% seo %}
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preload" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" as="style"
